app.js refactored

--- a/app.html
+++ b/app.html
@@ -23,7 +23,7 @@
         script.src = `https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAPS_API_KEY}&loading=async`;
         document.head.appendChild(script);
     </script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="js/main.js"></script>
 
     <script>
         tailwind.config = {
