--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section class="hero-gradient py-20 px-6">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-16">
-                <div class="inline-flex items-center gap-2 bg-brand-secondary text-brand-primary px-4 py-2 rounded-full text-sm font-bold mb-6">
+                <div class="inline-flex items-center gap-2 bg-brand-primary/20 text-brand-primary px-4 py-2 rounded-full text-sm font-bold mb-6">
                     <span class="material-icons-round text-base">location_on</span>
                     Comunitatea Locală Corbeanca
                 </div>
@@ -118,18 +118,21 @@
                     </a>
                 </div>
             </div>
-
+            <div class="flex items-center">
+                <div class="text-sm font-bold rounded-full bg-brand-primary/20 py-2 px-4 mb-2 text-brand-primary">Exemple:</div>
+            </div>
             <!-- Hero Image Placeholder -->
             <div class="bg-white rounded-3xl shadow-2xl p-8 border border-gray-200">
+                
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Mock Post 1 -->
                     <div class="bg-brand-bg rounded-2xl overflow-hidden shadow-sm border border-gray-100">
                         <div class="h-40 bg-gradient-to-br from-blue-100 to-blue-200 flex items-center justify-center">
-                            <span class="material-icons-round text-6xl text-blue-500">shopping_bag</span>
+                            <img class="cover" src="img/garden.png"/>
                         </div>
                         <div class="p-4">
                             <div class="flex items-center gap-2 mb-2">
-                                <span class="inline-flex items-center px-3 py-1 bg-brand-secondary text-xs font-bold text-gray-700 rounded-full uppercase">
+                                <span class="inline-flex items-center px-3 py-1 bg-brand-primary text-xs font-bold text-brand-secondary rounded-full uppercase">
                                     Bazar
                                 </span>
                             </div>
@@ -142,11 +145,11 @@
                     <!-- Mock Post 2 -->
                     <div class="bg-brand-bg rounded-2xl overflow-hidden shadow-sm border border-gray-100">
                         <div class="h-40 bg-gradient-to-br from-purple-100 to-purple-200 flex items-center justify-center">
-                            <span class="material-icons-round text-6xl text-purple-500">event</span>
+                            <img src="img/christmas.png"/>
                         </div>
                         <div class="p-4">
                             <div class="flex items-center gap-2 mb-2">
-                                <span class="inline-flex items-center px-3 py-1 bg-brand-secondary text-xs font-bold text-gray-700 rounded-full uppercase">
+                                <span class="inline-flex items-center px-3 py-1 bg-brand-primary text-xs font-bold text-brand-secondary rounded-full uppercase">
                                     Eveniment
                                 </span>
                             </div>
@@ -159,11 +162,11 @@
                     <!-- Mock Post 3 -->
                     <div class="bg-brand-bg rounded-2xl overflow-hidden shadow-sm border border-gray-100">
                         <div class="h-40 bg-gradient-to-br from-orange-100 to-orange-200 flex items-center justify-center">
-                            <span class="material-icons-round text-6xl text-orange-500">handshake</span>
+                            <img src="img/tools.png"/>
                         </div>
                         <div class="p-4">
                             <div class="flex items-center gap-2 mb-2">
-                                <span class="inline-flex items-center px-3 py-1 bg-brand-secondary text-xs font-bold text-gray-700 rounded-full uppercase">
+                                <span class="inline-flex items-center px-3 py-1 bg-brand-primary text-xs font-bold text-brand-secondary rounded-full uppercase">
                                     Împrumut
                                 </span>
                             </div>
