--- a/app.html
+++ b/app.html
@@ -258,6 +258,18 @@
 
                 <hr class="border-gray-100">
 
+                <!-- Push Notifications -->
+                <div class="bg-white">
+                    <h3 class="font-bold text-gray-800 mb-4 flex items-center gap-2">
+                        <span class="material-icons-round text-brand-secondary">notifications</span> Notificări Push
+                    </h3>
+                    <button onclick="requestNotificationPermission()" class="w-full bg-blue-500 text-white py-3 rounded-xl font-bold text-sm shadow-md hover:bg-blue-600 transition-colors">
+                        Activează Notificările Push
+                    </button>
+                </div>
+
+                <hr class="border-gray-100">
+
                 <!-- TABS for Lists -->
                 <div>
                     <div class="flex space-x-4 border-b border-gray-100 pb-2 mb-4">
